--- a/manifest.json
+++ b/manifest.json
@@ -13,21 +13,6 @@
   "categories": ["business", "education", "events"],
   "icons": [
     {
-      "src": "/favicon-16x16.png",
-      "sizes": "16x16",
-      "type": "image/png"
-    },
-    {
-      "src": "/favicon-32x32.png",
-      "sizes": "32x32",
-      "type": "image/png"
-    },
-    {
-      "src": "/apple-touch-icon.png",
-      "sizes": "180x180",
-      "type": "image/png"
-    },
-    {
       "src": "/logo.png",
       "sizes": "192x192",
       "type": "image/png",
@@ -42,9 +27,9 @@
   ],
   "screenshots": [
     {
-      "src": "/logo-cong-prag.jpg",
+      "src": "/logo.png",
       "sizes": "1280x720",
-      "type": "image/jpeg",
+      "type": "image/png",
       "platform": "wide",
       "label": "Página inicial do evento"
     }
